--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "",
+  "name": "kiran-pk-portfolio",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.5"
+    "astro": "^4.3.5",
+    "@astrojs/tailwind": "^5.1.0",
+    "tailwindcss": "^3.4.1",
+    "@astrojs/mdx": "^2.1.1",
+    "astro-icon": "^1.1.0",
+    "date-fns": "^3.3.1"
   }
 }
